--- a/app/src/main/res/drawable/style_spinner.xml
+++ b/app/src/main/res/drawable/style_spinner.xml
@@ -8,7 +8,7 @@
                 <inset android:insetLeft="-1dp"
                     android:insetRight="-1dp">
                 <shape android:shape="rectangle">
-                    <stroke android:color="@color/colorPrimaryDark"
+                    <stroke android:color="#EEF2F6"
                         android:width="3dp"/>
                     <corners android:radius="10dp"/>
                     <padding android:right="10dp"/>
