--- a/app/src/main/res/layout/facts_fragment.xml
+++ b/app/src/main/res/layout/facts_fragment.xml
@@ -41,11 +41,15 @@
        app:layout_constraintTop_toBottomOf="@+id/fact_name"
        tools:text="Body msknjss ssksjssjskjsjsss sskjjsosjslkjsslkjss sksjnsjskjs ssjscskodjslksls slll sls lkskslsl slsnkss skjsjsjsjsks sskjsjsksjsjs s sksjnsksjs s skjsksjskss s sksjsks" />
 
-   <include
-       layout="@layout/adview"
-       android:id="@+id/adView"
-       android:layout_width="0dp"
-       android:layout_height="0dp"/>
+   <com.google.android.gms.ads.AdView
+       android:id="@+id/adV"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       app:adSize="BANNER"
+       app:adUnitId="ca-app-pub-2405193777782482/7176920316"
+       app:layout_constraintBottom_toBottomOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
