--- a/app/src/main/res/layout/o_o_m_fragment.xml
+++ b/app/src/main/res/layout/o_o_m_fragment.xml
@@ -35,11 +35,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/oom_title"
             tools:text="Hellosdmlnsjkk sk snkd ksdlk ksnldks kslks klsks klss lsks lksns lskn sls" />
-<include
-    android:id="@+id/adView"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    layout="@layout/adview"/>
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/adV"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:adSize="BANNER"
+            app:adUnitId="ca-app-pub-2405193777782482/7176920316"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
