--- a/app/src/main/res/layout/adview.xml
+++ b/app/src/main/res/layout/adview.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent">
 
         <com.google.android.gms.ads.AdView
-            android:id="@+id/adView"
+            android:id="@+id/adV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:adSize="BANNER"
