--- a/app/src/main/res/layout/fragment_catholic_quiz.xml
+++ b/app/src/main/res/layout/fragment_catholic_quiz.xml
@@ -24,16 +24,16 @@
 
     <com.sanojpunchihewa.glowbutton.GlowButton
         android:id="@+id/start_quiz"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="68dp"
         android:layout_marginEnd="32dp"
-        android:fontFamily="@font/bubblegum_sans"
-        android:padding="12dp"
+        android:fontFamily="@font/baloo_bhai"
+        android:padding="17dp"
         android:text="@string/start_quiz"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="40sp"
+        android:textSize="20sp"
         android:textStyle="bold|normal"
         app:buttonColor="@color/colorWhite"
         app:cornerRadius="7dp"
@@ -45,7 +45,7 @@
         app:pressedGlowSize="28sp" />
 
     <Spinner
-        android:layout_height="30dp"
+        android:layout_height="40dp"
         android:id="@+id/spinner_number_of_questions"
         android:layout_width="130dp"
         android:layout_margin="10dp"
@@ -59,10 +59,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/choose" />
 
-    <include android:id="@+id/adView"
-        layout="@layout/adview"
-        android:layout_width="0dp"
-        android:layout_height="0dp"/>
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:adSize="BANNER"
+        app:adUnitId="ca-app-pub-2405193777782482/7176920316"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <RadioGroup
         android:id="@+id/radio_group"
