--- a/app/src/main/res/layout/fragment_main_screen.xml
+++ b/app/src/main/res/layout/fragment_main_screen.xml
@@ -21,11 +21,13 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/main_screen_single_item_layout" />
 
-    <include
-        layout="@layout/adview"
-        android:id="@+id/adView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"/>
-
-
+    <com.google.android.gms.ads.AdView
+        android:id="@+id/adV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:adSize="BANNER"
+        app:adUnitId="ca-app-pub-2405193777782482/7176920316"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
